--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ numpy>=1.23.0
 matplotlib>=3.6.0
 openpyxl>=3.0.10
 scikit-learn>=1.2.0
+lightgbm>=4.0.0
+xgboost>=2.0.0
 torch>=2.1.0
 pytest>=7.0.0
